# rewe-ebon-parser

./: .all-contributorsrc  .gitignore  .readthedocs.yml  CHANGELOG.html  CHANGELOG.md  README.md  _quarto.yml  cli.html  cli.qmd  index.html  index.qmd  pyproject.toml  search.json
.github/workflows/: deploy-docs.yml  python-package-test.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  rewe_ebon_parser.rst
examples/eBons_txt_anonymized/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
reference/: LoyaltyData.html  MarketAddress.html  PaybackDetails.html  Payment.html  REWEBonusDetails.html  Receipt.html  ReceiptItem.html  TaxDetails.html  index.html  parse_ebon.html  parse_pdf_ebon.html
rewe_ebon_parser/: classes.py  cli.py  output.py  parse.py
src/rewe_ebon_parser/: __init__.py  classes.py  cli.py  output.py  parse.py  privacy.py  table.py
tests/: test_bugfixes.py  test_date_parsing.py  test_item_counting.py  test_parse.py  test_rewe_bonus_parse.py  test_table.py
