[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rewe-ebon-parser"
version = "0.0.8"
authors = [
  { name="Egor Kotov", email="kotov.egor@gmail.com" },
]
description = "Parse and convert REWE eBons (digital receipts) to JSON and CSV."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pdfplumber",
    "pre-commit>=4.3.0",
    "pytest>=7.0.1",
    "pytz",
    "quartodoc>=0.11.1",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

docs = [
    "quartodoc"
]

[project.scripts]
rewe-ebon-parser = "rewe_ebon_parser.cli:main"

[project.urls]
homepage = "https://github.com/e-kotov/rewe-ebon-parser"
source = "https://github.com/e-kotov/rewe-ebon-parser"
issues = "https://github.com/e-kotov/rewe-ebon-parser/issues"
changelog = "https://github.com/e-kotov/rewe-ebon-parser/blob/main/CHANGELOG.md"

[tool.hatch.build]
exclude = [
  "**/.*",
  "docs",
  "tests",
  "examples"
]

[tool.hatch.build.targets.wheel]
only-include = ["src/rewe_ebon_parser"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
